--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,16 @@
 language: python
 matrix:
   include:
-    - python: "2.6"
     - python: "2.7"
-    - python: "2.7.10"
-    - python: "2.7.11"
-  allow_failures:
-    - python: "3.2"
-    - python: "3.3"
     - python: "3.4"
     - python: "3.5"
+    - python: "3.6"
+  allow_failures:
     - python: "nightly"
   
 # command to install dependencies
 install: 
-  - pip install python-dateutil pytest mock
+  - pip install pytest mock
 # command to run tests
 script: py.test -v
 
